test/libsolidity/syntaxTests/nameAndTypeResolution/416_interface_function_bodies.sol
interface I {
    function f() public {
    }
}
// ----
// TypeError: (18-45): Functions in interfaces cannot have an implementation.
// Warning: (18-45): Functions in interfaces should be declared external.
